Создано с помощью Colaboratory

--- a/Metallization.ipynb
+++ b/Metallization.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNTDXH35j86pstGNlCm2jgc",
+      "authorship_tag": "ABX9TyOnrEm6nRaDtlzh9ZaFS8mz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,12 +29,23 @@
     {
       "cell_type": "code",
       "source": [
-        "user = 'yarkalm'\n",
-        "git_token = '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'\n",
-        "repository = 'def_metallization'"
+        "import pandas as pd\n",
+        "import math\n",
+        "import numpy as np\n",
+        "from sklearn.preprocessing import StandardScaler\n",
+        "from sklearn import preprocessing\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "from itertools import product\n",
+        "\n",
+        "import sklearn\n",
+        "from tensorflow import keras\n",
+        "from keras.layers import Dense, Dropout\n",
+        "import matplotlib.pyplot as plt\n",
+        "from keras import metrics\n",
+        "import tensorflow as tf"
       ],
       "metadata": {
-        "id": "JorLIBcm-B9K"
+        "id": "qLtDxsWT_bBY"
       },
       "execution_count": null,
       "outputs": []
@@ -42,22 +53,40 @@
     {
       "cell_type": "code",
       "source": [
-        "!git remote add <remote-name> https://{git_token}@github.com/{username}/{repository}.git"
+        "df = pd.read_excel('/content/Датасет_металлург.xlsx')\n",
+        "\n",
+        "\n",
+        "\n",
+        "input_data = df[[\"CO2\",\"CO\",\"H2\",\"Herm\",\"Magn\",\"Temp\",\"Time\",\"m before\",\"m after\"]]\n",
+        "output_data = df[[\"RedDegr\"]]\n",
+        "\n",
+        "input_data"
+      ],
+      "metadata": {
+        "id": "aTOoly1O_d8q"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!git commit"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "p3B4AY7t7tle",
-        "outputId": "d3b859b8-558c-4101-e895-b45faad029b6"
+        "id": "FKQUiWmA_iop",
+        "outputId": "fdcbff75-a950-4967-c83e-8d7ac67d096a"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "/bin/bash: remote-name: No such file or directory\n"
+            "fatal: not a git repository (or any of the parent directories): .git\n"
           ]
         }
       ]
